--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
     
     <h2>Mark Kipngeno</h2>
 
+    <p>IT Specialist | Web Developer | Cybersecurity Enthusiast</p>
+
+    <nav>
+
+        <ul>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
