--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     
     <h2>Mark Kipngeno</h2>
 
-    <p>IT Specialist | Web Developer | Cybersecurity Enthusiast</p>
+    <p>Python Developer | Web Developer | Cybersecurity Enthusiast</p>
 
     <nav>
+        <img src="" alt="">
 
         <ul>
             <li><a href="#projects">Projects</a></li>
