--- a/index.html
+++ b/index.html
@@ -26,5 +26,28 @@
         </ul>
     </nav>
 
+    <div class="cards">
+
+        <div class="card">
+            <h4>Python</h4>
+            <P>I love python</P>
+        </div>
+
+        <div class="card">
+            <h4>HTML</h4>
+            <p> I love HTML</p>
+
+        </div>
+
+        <div class="card">
+            <h4>CSS</h4>
+            <p> I love CSS</p>
+        </div>
+
+
+    </div>
+
+   
+
 </body>
 </html>
