--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="EN">
-
+<html lang="en">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta charset="UTF-8">
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Kipngeno</title>
 
+    <!-- Link to your external CSS file -->
     <link rel="stylesheet" href="mark.css">
 </head>
-
 <body>
-    
-    <h2>Mark Kipngeno</h2>
 
+    <h2>Mark Kipngeno</h2>
     <p>Python Developer | Web Developer | Cybersecurity Enthusiast</p>
 
     <nav>
-        <img src="" alt="">
-
+        <img src="profile-pic.jpg" alt="Mark Kipngeno">
         <ul>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -27,27 +24,34 @@
     </nav>
 
     <div class="cards">
-
         <div class="card">
             <h4>Python</h4>
-            <P>I love python</P>
+            <p>I love Python</p>
         </div>
-
         <div class="card">
             <h4>HTML</h4>
-            <p> I love HTML</p>
-
+            <p>I love HTML</p>
         </div>
-
         <div class="card">
             <h4>CSS</h4>
-            <p> I love CSS</p>
+            <p>I love CSS</p>
         </div>
-
-
     </div>
 
-   
+    <section id="projects">
+        <h3>Projects</h3>
+        <p>Coming soon.</p>
+    </section>
+
+    <section id="experience">
+        <h3>Experience</h3>
+        <p> Coming soon.</p>
+    </section>
+
+    <section id="contact">
+        <h3>Contact</h3>
+        <p>Email: markkipngeno01@gmail.com<br>Phone: +254 700781538</p>
+    </section>
 
 </body>
 </html>
