--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Kipngeno</title>
 
-    <!-- Link to your external CSS file -->
+    
     <link rel="stylesheet" href="mark.css">
 </head>
 <body>
@@ -47,6 +47,13 @@
         <h3>Experience</h3>
         <p> Coming soon.</p>
     </section>
+
+     <section id="hire-me">
+        <h3>Hire Me </h3>
+        <p> Coming soon.</p>
+    </section>
+
+    
 
     <section id="contact">
         <h3>Contact</h3>
